Added 'About' part

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
         .Header-inner{
             display: flex;
-            justify-content: ;
+            justify-content: center;
             align-items: Center;
             gap: 20px;
             padding: 0 200px;
-            height: 377px;
+            height: 400px;
             background-image: url('banner.jpg');
             background-repeat: no-repeat;
-            background-size: contain;
+            background-size: cover;
             background-position: center;
         }
 
@@ -33,7 +33,7 @@
         .first-contain{
             display: flex;
             align-items: center;
-            gap: 300px;
+            gap: 350px;
         }
 
         .First-text{
@@ -48,6 +48,27 @@
             display: block;
         }
 
+        .About {
+            background-color: #fffaf0;
+            padding: 60px 200px;
+            font-family: 'Times New Roman', Times, serif;
+            color: #333;
+        }
+
+        .about-title{
+            font-size: 50px;
+            font-weight: bold;
+            margin-bottom: 20px;
+            color: #b5651d;
+        }
+
+        .about-description {
+            font-size: 22px;
+            line-height: 1.8;
+            max-width: 900px;
+        }
+
+
     </style>
 </head>
 <body>
@@ -60,10 +81,12 @@
         </div>
     </div>
     <div class="About">
-        <p class="titlee">About</p>
-        <p class="description">Hello , welcome to LoopHandmadeBagTR. 
-I'm Müge.I knit all the bags in my store with great care, using the highest quality materials.I do it all, from knitting to lining.To produce something is my biggest passion.
-Thank you for supporting small businesses and my shop</p>
+        <h2 class="about-title">About</h2>
+        <p class="about-description">Hello, welcome to <strong>LoopHandmadeBagTR</strong>!<br><br>
+
+        I'm <strong>Müge</strong>. I knit all the bags in my store with great care, using the highest quality materials. From knitting to lining, I handle every step myself. Creating beautiful and practical items by hand is my biggest passion.<br><br>
+        Thank you for supporting small businesses and my shop!
+        </p>
     </div>
     
 </body>
