Did the css for the purchase button

--- a/index.html
+++ b/index.html
@@ -12,14 +12,6 @@
         <div class="first-contain">
         </div>
     </div>
-    <div class="About">
-        <h2 class="about-title">About</h2>
-        <p class="about-description">Hello, welcome to <strong>LoopHandmadeBagTR</strong>!<br><br>
-
-        I'm <strong>Müge</strong>. I knit all the bags in my store with great care, using the highest quality materials. From knitting to lining, I handle every step myself. Creating beautiful and practical items by hand is my biggest passion.<br><br>
-        Thank you for supporting small businesses and my shop!
-        </p>
-    </div>
     <div class="filter-buttons">
         <button onclick="filterBags('all')">All</button>
         <button onclick="filterBags('raffia')">Raffia Bags</button>
@@ -50,10 +42,19 @@
         <div class="modal-content">
             <span class="close-btn" onclick="closeModal('modal1')">&times;</span>
             <img src="photos/raffia1.jpg" alt="Raffia Bag">
-            <p><strong>Raffia Bag 1</strong></p>
+            <p><strong>Handmade Raffia Clutch Bag , Crochet Bag, Summer Clutch , Knitted Raffia Bag , Straw Pouch Bag, Unique Gift For Her</strong></p>
+            <p>Description: Step into summer style with our exquisitely crafted Handmade Raffia Clutch Bag. This versatile beauty is a delightful blend of crochet and knitting, woven from high-quality raffia to create a stunning and durable accessory for your sunny adventures. The intricate design of this straw pouch bag exudes charm and uniqueness, making it a perfect choice for those seeking a one-of-a-kind piece.</p>
             <p>Price: $45</p>
-            <p>Description: Beautiful handmade raffia bag, perfect for everyday use or as a gift. Fully hand-knitted with love and high-quality yarn.</p>
+            <a class="buy-button"  href="https://www.etsy.com/listing/1684439505">Purchase</a>
         </div>
+    </div>
+
+    <div class="About">
+        <h2 class="about-title">About</h2>
+        <p class="about-description">Hello, welcome to <strong>LoopHandmadeBagTR</strong>!<br><br>
+        I'm <strong>Müge</strong>. I knit all the bags in my store with great care, using the highest quality materials. From knitting to lining, I handle every step myself. Creating beautiful and practical items by hand is my biggest passion.<br><br>
+        Thank you for supporting small businesses and my shop!
+        </p>
     </div>
 
     <script>
