Finished contacts part

--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
 
     <div class="contacts">
         <img src="photos/logo.jpg" alt="logo" class="logo-img">
+        <div class="contact-info">
+            <div class="contact-row">
+                <img src="photos/insta.jpg" alt="insta-logo"  class="social-logo">
+                <span>@loophandmadebag</span>
+            </div>
+
+            <div class="contact-row">
+                <img src="photos/email.jpg" alt="email-logo" class="social-logo">
+                <span>mugeokumus35@hotmail.com</span>
+            </div>
+
+            <div class="contact-row">
+                <img src="photos/whatsapp.png" alt="whatsapp-logo" class="social-logo">
+                <span>+905418814014 (whatsapp only)</span>
+            </div>
+        </div>
     </div>
 
     <script>
