Did some css for better look on other devices and added some bags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LoopHandmadeBagTr</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -118,17 +119,115 @@
             {
                 id: "modal1",
                 name: "Raffia Bag 1",
+                title: "Handmade Raffia Clutch Bag , Crochet Bag, Summer Clutch , Knitted Raffia Bag , Straw Pouch Bag, Unique Gift For Her",
                 category: "raffia",
                 coverImage: "photos/raffia/raffia1.jpg",
                 hoverImage: "photos/raffia/raffiabag1hover.jpg",
                 images: [
                     "photos/raffia/raffia1.jpg",
                     "photos/raffia/raffiabag1hover.jpg",
-                    "photos/raffia/raffiabag1-2.webp"
+                    "photos/raffia/raffiabag1-2.webp",
+                    "photos/raffia/raffiabag1-3.webp",
+                    "photos/raffia/raffiabag1-4.webp"
                 ],
-                description: "Step into summer style with our exquisitely crafted Handmade Raffia Clutch Bag...",
+                description: "Step into summer style with our exquisitely crafted Handmade Raffia Clutch Bag. This versatile beauty is a delightful blend of crochet and knitting, woven from high-quality raffia to create a stunning and durable accessory for your sunny adventures. The intricate design of this straw pouch bag exudes charm and uniqueness, making it a perfect choice for those seeking a one-of-a-kind piece.",
                 price: "45",
                 link: "https://www.etsy.com/listing/1684439505"
+            },
+
+            {
+                id: "modal2",
+                name: "Raffia Bag 2",
+                title: "Handmade Raffia Clutch Bag , Crochet Bag , Colorful Summer Clutch , Knitted Raffia Bag , Straw Pouch Bag, Unique Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/raffia2.jpg",
+                hoverImage: "photos/raffia/raffiabag2-hover.webp",
+                images: [
+                    "photos/raffia/raffia2.jpg",
+                    "photos/raffia/raffiabag2-hover.webp",
+                    "photos/raffia/raffiabag2-2.jpg",
+                    "photos/raffia/raffiabag2-3.jpg",
+                    "photos/raffia/raffiabag2-4.jpg"
+                ],
+                description: "This raffia clutch is a perfect addition to any summer wardrobe. It is handcrafted using high-quality raffia straw, which is known for its durability and lightweight texture. The natural and rustic feel of raffia adds an element of bohemian chic to your outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1704380619"
+            },
+
+            {
+                id: "modal3",
+                name: "Raffia Bag 3",
+                title: "Handmade Raffia Clutch Bag , Crochet Bag , Colorful Summer Clutch , Knitted Raffia Bag , Straw Pouch Bag, Unique Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb3.webp",
+                hoverImage: "photos/raffia/rb3-2.webp",
+                images: [
+                    "photos/raffia/rb3.webp",
+                    "photos/raffia/rb3-2.webp",
+                    "photos/raffia/rb3-3.webp",
+                    "photos/raffia/rb3-4.webp",
+                    "photos/raffia/rb3-5.webp"
+                ],
+                description: "This raffia clutch is a perfect addition to any summer wardrobe. It is handcrafted using high-quality raffia straw, which is known for its durability and lightweight texture. The natural and rustic feel of raffia adds an element of bohemian chic to your outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1662222582"
+            },
+
+            {
+                id: "modal4",
+                name: "Raffia Bag 4",
+                title: "Handmade Raffia Clutch Bag , Crochet Bag , Colorful Summer Clutch , Knitted Raffia Bag , Straw Pouch Bag, Unique Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb4.webp",
+                hoverImage: "photos/raffia/rb4-2.webp",
+                images: [
+                    "photos/raffia/rb4.webp",
+                    "photos/raffia/rb4-2.webp",
+                    "photos/raffia/rb4-3.webp",
+                    "photos/raffia/rb4-4.webp",
+                    "photos/raffia/rb4-5.webp",
+                ],
+                description: "This raffia clutch is a perfect addition to any summer wardrobe. It is handcrafted using high-quality raffia straw, which is known for its durability and lightweight texture. The natural and rustic feel of raffia adds an element of bohemian chic to your outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing/1705521285"
+            },
+
+            {
+                id: "modal5",
+                name: "Raffia Bag 5",
+                title: "Handmade Raffia Clutch Bag , Crochet Bag , Colorful Summer Clutch , Knitted Raffia Bag , Straw Pouch Bag, Unique Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb5.webp",
+                hoverImage: "photos/raffia/rb5-2.webp",
+                images: [
+                    "photos/raffia/rb5.webp",
+                    "photos/raffia/rb5-2.webp",
+                    "photos/raffia/rb5-3.webp",
+                    "photos/raffia/rb5-4.webp",
+                    "photos/raffia/rb5-5.webp",
+                ],
+                description:"This raffia clutch is a perfect addition to any summer wardrobe. It is handcrafted using high-quality raffia straw, which is known for its durability and lightweight texture. The natural and rustic feel of raffia adds an element of bohemian chic to your outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing/4298068657"
+            },
+
+            {
+                id: "modal6",
+                name: "Raffia Bag 6",
+                title: "Orange Handmade Raffia Clutch Bag , Crochet Bag , Colorful Summer Clutch , Knitted Raffia Bag , Straw Pouch Bag, Unique Gift For Her",
+                category: "raffia",
+                coverImage: "photos/raffia/rb6.jpg",
+                hoverImage: "photos/raffia/rb6-2.avif",
+                images: [
+                    "photos/raffia/rb6.jpg",
+                    "photos/raffia/rb6-2.avif",
+                    "photos/raffia/rb6-3.jpg",
+                    "photos/raffia/rb6-4.jpg",
+                    "photos/raffia/rb6-5.jpg"
+                ],
+                description: "This raffia clutch is a perfect addition to any summer wardrobe. It is handcrafted using high-quality raffia straw, which is known for its durability and lightweight texture. The natural and rustic feel of raffia adds an element of bohemian chic to your outfit.",
+                price: "45",
+                link: "https://www.etsy.com/listing"
             }
         ]
 
@@ -158,7 +257,7 @@
                                 <button class="next" id="next" onclick="nextImage()">&#8594;</button>
                                 <p class="info">1/${product.images.length}</p>
                             </div>
-                            <p><strong>${product.name}</strong></p>
+                            <p><strong>${product.title}</strong></p>
                             <p>Description: ${product.description}</p>
                             <p>Price: $${product.price}</p>
                             <a class="buy-button" target="_blank" href="${product.link}">Purchase</a>
